<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/primary"
    tools:context=".ForgetActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/app_name"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/find_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/find_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/forget_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:layout_marginTop="16dp"
            android:text="@string/action_to_forget"
            android:textStyle="bold" />



    </LinearLayout>

    <TextView
        android:layout_marginTop="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/back_to_login"
        android:layout_below="@+id/find_view"
        android:layout_centerHorizontal="true"
    />

</RelativeLayout>